Closed
Bug 356045
Opened 19 years ago
Closed 19 years ago
xul tree-table, cells in the first row are exposed in a mess
Categories
(Core :: Disability Access APIs, defect, P2)
Tracking
()
RESOLVED
FIXED
People
(Reporter: monsanto, Assigned: evan.yan)
References
Details
(Keywords: access)
Attachments
(1 file, 1 obsolete file)
|
4.71 KB,
patch
|
ginnchen+exoracle
:
review+
aaronlev
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.0.7) Gecko/20060921 Ubuntu/dapper-security Firefox/1.5.0.7
Build Identifier: version 3 alpha 1 (20061009)
Accessibility information about the message-header tree table is incorrect:
1. The tree-table reports that it only has three columns
2. In the first row, only the information starting from the "Date" column is available.
This problem means that assistive technologies like screen readers and Braille cannot present correct information about message headers. In other words, the message-header tree-table is inaccessible to people with visual disabilities.
To duplicate this but, . and find the message-header table.
Reproducible: Always
Steps to Reproduce:
1. Run at-poke with Thunderbird version 3
2. Expand the at-poke information for Thunderbird
3. Examine the tree-table information for the message headers
You can also run the Orca screen reader with Thunderbird version 3. Navigate to the message headers. As you down-arrow through the headers, Orca does not speak the message subject or sender. It will only speak the date and the two columns after the date.
Actual Results:
Orca does not speak the message subject or sender. It will only speak the date and the two columns after the date.
Expected Results:
Orca should speak all of the message-header information
| Reporter | ||
Comment 1•19 years ago
|
||
The priority of this bug should be P2 and the severity major
| Reporter | ||
Updated•19 years ago
|
Keywords: access
Summary: Accessibility information incorrect incorrect message-header tree-table → message-header tree-table information incorrect
confirmed.
very odd, why the first mail starts from the Date, but mails below are fine.
I also don't know why we only get 3 header columns
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee: mscott → Evan.Yan
Component: General → Disability Access APIs
Product: Thunderbird → Core
Version: unspecified → Trunk
The cause of the bug:
in nsXULTreeAccessible.cpp, GetFirstChild() calls GetCachedTreeitemAccessible() with a null column parameter, which makes GetCachedTreeitemAccessible() get the column from GetKeyColumn(). That's why the cells of the first row and before the sorted column are disappeared.
The patch fixed the invoking of GetCachedTreeitemAccessible().
Attachment #244865 -
Flags: review?(ginn.chen)
Comment on attachment 244865 [details] [diff] [review]
patch
Good.
Please add 2 helper functions, GetFirstColumn, GetLastColumn.
Attachment #244865 -
Flags: review?(ginn.chen) → review-
addressing Ginn's comments.
Attachment #244865 -
Attachment is obsolete: true
Attachment #244878 -
Flags: review?(ginn.chen)
Attachment #244878 -
Flags: review?(ginn.chen)
Attachment #244878 -
Flags: review?(aaronleventhal)
Attachment #244878 -
Flags: review+
Summary: message-header tree-table information incorrect → xul tree-table, cells in the first row are exposed in a mess
Comment 6•19 years ago
|
||
Comment on attachment 244878 [details] [diff] [review]
patch v2
I didn't look very close, but it looks right.
Attachment #244878 -
Flags: review?(aaronleventhal) → review+
Checking in accessible/src/xul/nsXULTreeAccessible.cpp;
/cvsroot/mozilla/accessible/src/xul/nsXULTreeAccessible.cpp,v <-- nsXULTreeAccessible.cpp
new revision: 1.41; previous revision: 1.40
done
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•