Bugzilla Bug 356045 xul tree-table, cells in the first row are exposed in a mess. Patch by Evan.Yan@Sun.COM. ginn.chen: review+ aaronleventhal: review+